[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pause/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Panels/Menu_Info_Panel.tres" type="StyleBox" id=2]
[ext_resource path="res://Pause/Char_Menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/Menu_Font.tres" type="DynamicFont" id=4]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -890.0
margin_bottom = -310.0
rect_scale = Vector2( 1.86, 1.4 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -43.0
margin_top = -28.0
margin_right = 1070.0
margin_bottom = 808.0

[node name="All" type="HBoxContainer" parent="."]
anchor_right = 0.37
margin_top = 10.0
margin_right = 647.9
margin_bottom = 763.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Left" type="Panel" parent="All"]
margin_left = 17.0
margin_right = 737.0
margin_bottom = 753.0
rect_min_size = Vector2( 720, 50 )
custom_styles/panel = ExtResource( 2 )

[node name="Chars" type="VBoxContainer" parent="All/Left"]
margin_right = 715.0
margin_bottom = 761.0
rect_min_size = Vector2( 720, 0 )

[node name="Char0" parent="All/Left/Chars" instance=ExtResource( 3 )]
editor/display_folded = true
visible = false
focus_neighbour_right = NodePath("")
focus_mode = 0
enabled_focus_mode = 0

[node name="Char1" parent="All/Left/Chars" instance=ExtResource( 3 )]
editor/display_folded = true
visible = false
focus_neighbour_top = NodePath("../Char0")
focus_neighbour_right = NodePath("")
focus_neighbour_bottom = NodePath("../Char2")
focus_mode = 0
enabled_focus_mode = 0

[node name="Char2" parent="All/Left/Chars" instance=ExtResource( 3 )]
editor/display_folded = true
visible = false
focus_neighbour_top = NodePath("../Char1")
focus_neighbour_right = NodePath("")
focus_neighbour_bottom = NodePath("../Char3")
focus_mode = 0
enabled_focus_mode = 0

[node name="Char3" parent="All/Left/Chars" instance=ExtResource( 3 )]
editor/display_folded = true
visible = false
focus_neighbour_top = NodePath("../Char2")
focus_neighbour_right = NodePath("")
focus_neighbour_bottom = NodePath("../Char0")
focus_mode = 0
enabled_focus_mode = 0

[node name="Right" type="VBoxContainer" parent="All"]
margin_left = 741.0
margin_right = 1011.0
margin_bottom = 753.0
alignment = 1

[node name="Options_Panel" type="Panel" parent="All/Right"]
margin_right = 270.0
margin_bottom = 437.16
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 270, 437.16 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 2 )

[node name="Options" type="VBoxContainer" parent="All/Right/Options_Panel"]
margin_top = -1.0
margin_right = 270.0
margin_bottom = 432.0
size_flags_vertical = 0

[node name="Item" type="Button" parent="All/Right/Options_Panel/Options" groups=[
"text",
]]
margin_right = 270.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../../../../Left/Chars/Char0/Lanes/Front")
focus_neighbour_top = NodePath("../Save")
focus_neighbour_bottom = NodePath("../Skill")
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Item"
flat = true

[node name="Skill" type="Button" parent="All/Right/Options_Panel/Options" groups=[
"text",
]]
margin_top = 54.0
margin_right = 270.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../../../../Left/Chars/Char0/Lanes/Front")
focus_neighbour_top = NodePath("../Item")
focus_neighbour_bottom = NodePath("../Equip")
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "Skill"
flat = true

[node name="Equip" type="Button" parent="All/Right/Options_Panel/Options" groups=[
"text",
]]
margin_top = 108.0
margin_right = 270.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../../../../Left/Chars/Char0/Lanes/Front")
focus_neighbour_top = NodePath("../Skill")
focus_neighbour_bottom = NodePath("../Change")
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "Equipment"
flat = true

[node name="Change" type="Button" parent="All/Right/Options_Panel/Options" groups=[
"text",
]]
margin_top = 162.0
margin_right = 270.0
margin_bottom = 212.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../../../../Left/Chars/Char1/Lanes/Front")
focus_neighbour_top = NodePath("../Equip")
focus_neighbour_bottom = NodePath("../Status")
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Change"
flat = true

[node name="Status" type="Button" parent="All/Right/Options_Panel/Options" groups=[
"text",
]]
margin_top = 216.0
margin_right = 270.0
margin_bottom = 266.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../../../../Left/Chars/Char0/Lanes/Front")
focus_neighbour_top = NodePath("../Change")
focus_neighbour_bottom = NodePath("../Tree")
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "Status"
flat = true

[node name="Tree" type="Button" parent="All/Right/Options_Panel/Options" groups=[
"text",
]]
margin_top = 270.0
margin_right = 270.0
margin_bottom = 320.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../../../../Left/Chars/Char1/Lanes/Front")
focus_neighbour_top = NodePath("../Status")
focus_neighbour_bottom = NodePath("../Options")
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
toggle_mode = true
text = "Job Tree"
flat = true

[node name="Options" type="Button" parent="All/Right/Options_Panel/Options" groups=[
"text",
]]
margin_top = 324.0
margin_right = 270.0
margin_bottom = 374.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../../../../Left/Chars/Char1/Lanes/Front")
focus_neighbour_top = NodePath("../Tree")
focus_neighbour_bottom = NodePath("../Save")
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Options"
flat = true

[node name="Save" type="Button" parent="All/Right/Options_Panel/Options" groups=[
"text",
]]
margin_top = 378.0
margin_right = 270.0
margin_bottom = 428.0
rect_min_size = Vector2( 0, 50 )
focus_neighbour_left = NodePath("../../../../Left/Chars/Char1/Lanes/Front")
focus_neighbour_top = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Item")
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Save/Load"
flat = true

[node name="Gap" type="Panel" parent="All/Right"]
margin_top = 441.0
margin_right = 270.0
margin_bottom = 501.0
rect_min_size = Vector2( 0, 60 )

[node name="Info" type="VBoxContainer" parent="All/Right"]
margin_top = 505.0
margin_right = 270.0
margin_bottom = 753.0
rect_min_size = Vector2( 0, 210 )

[node name="Area" type="Panel" parent="All/Right/Info" groups=[
"text",
]]
margin_right = 270.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = ExtResource( 2 )

[node name="Area_text" type="Label" parent="All/Right/Info/Area" groups=[
"text",
]]
margin_top = 4.0
margin_right = 270.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
text = "World Map"
align = 1
valign = 1
uppercase = true

[node name="Money" type="Panel" parent="All/Right/Info" groups=[
"text",
]]
margin_top = 84.0
margin_right = 270.0
margin_bottom = 164.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = ExtResource( 2 )

[node name="Money_text" type="Label" parent="All/Right/Info/Money" groups=[
"text",
]]
margin_top = -6.10352e-05
margin_right = 270.0
margin_bottom = 79.9999
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
text = "500G"
align = 1
valign = 1
uppercase = true

[node name="Playtime" type="Panel" parent="All/Right/Info" groups=[
"text",
]]
margin_top = 168.0
margin_right = 270.0
margin_bottom = 248.0
rect_min_size = Vector2( 0, 80 )
custom_styles/panel = ExtResource( 2 )

[node name="Playtime_text" type="Label" parent="All/Right/Info/Playtime" groups=[
"text",
]]
margin_right = 270.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
text = "20:00:01"
align = 1
valign = 1
uppercase = true

[connection signal="pressed" from="All/Left/Chars/Char0" to="." method="_on_Char0_pressed"]
[connection signal="pressed" from="All/Left/Chars/Char1" to="." method="_on_Char1_pressed"]
[connection signal="pressed" from="All/Left/Chars/Char2" to="." method="_on_Char2_pressed"]
[connection signal="pressed" from="All/Left/Chars/Char3" to="." method="_on_Char3_pressed"]
[connection signal="pressed" from="All/Right/Options_Panel/Options/Item" to="." method="_on_Item_pressed"]
[connection signal="pressed" from="All/Right/Options_Panel/Options/Skill" to="." method="_on_Skill_pressed"]
[connection signal="pressed" from="All/Right/Options_Panel/Options/Equip" to="." method="_on_Equip_pressed"]
[connection signal="pressed" from="All/Right/Options_Panel/Options/Change" to="." method="_on_Change_pressed"]
[connection signal="pressed" from="All/Right/Options_Panel/Options/Status" to="." method="_on_Status_pressed"]
[connection signal="pressed" from="All/Right/Options_Panel/Options/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="All/Right/Options_Panel/Options/Save" to="." method="_on_Save_pressed"]
